acceptance_tests/invalid_scripts/empty_instruction.erl
[{pool,
    [{worker_type, dummy_worker}],
    [{}]}].